--- a/index.wiki
+++ b/index.wiki
@@ -1,4 +1,1 @@
-= Alternativ till zettelkasten? =
-== dev ==
-    * [[BLAPP]] - Sköna BLAPP-resurser
-    * [[Scratchpad]] - tillfälliga grejer som bör fortsätta vara tillfälliga
+Home.wiki
