intial commit redux of vimwiki/gollum.nyaste

--- a/BLAPP.wiki
+++ b/BLAPP.wiki
@@ -9,7 +9,7 @@
 }
 ```
 
-(fÃ¶r agi byt userId till blapp-agi@blinfo.se och source till agi)
+(för agi byt userId till blapp-agi@blinfo.se och source till agi)
 
 base64-encoda 3 ggr.
 http://www.utilities-online.info/base64/
@@ -17,7 +17,7 @@ http://www.utilities-online.info/base64/
 POSTas till:
 https://apireg.blinfo.se/data-safe/deposit/time/60000000
 
-detta ger en integrationKey som anvÃ¤nds till
+detta ger en integrationKey som används till
 localhost:4200/integration?key="<integrationKey>"
 
-detta i sin tur ger dig en onboardinglÃ¤nk som du kan anvÃ¤nda fÃ¶r att onboarda ett inte redan onboardat fÃ¶retag
+detta i sin tur ger dig en onboardinglänk som du kan använda för att onboarda ett inte redan onboardat företag
