--- a/Home.wiki
+++ b/Home.wiki
@@ -1,4 +1,4 @@
 = Alternativ till zettelkasten? =
 == dev ==
-    * [[BLAPP]] - Sköna BLAPP-resurser
+    * [BLAPP](BLAPP) - Sköna BLAPP-resurser
     * [[Scratchpad]] - tillfälliga grejer som bör fortsätta vara tillfälliga
