--- a/blapp.wiki
+++ b/blapp.wiki
@@ -1,4 +1,4 @@
-# BLAPP #
+# BLAPP 
 
-## Onboardinghoreri ##
+## Onboardinghoreri 
 [Superhemlig gist-länk](https://gist.github.com/Gustavhol/74a0e134f2f8e1f6ecc584b0b1c7b647)
