--- a/datasources.wiki
+++ b/datasources.wiki
@@ -1,9 +1,9 @@
-# Datakällor
+= Datakällor =
 
-## Samhälle
+== Samhälle ==
    * https://www.dataportal.se
         Portal för svenska dataset från stat, kommuner osv. Sköts av DIGG.
 
-## Språk
+== Språk ==
     * https://github.com/peterdalle/svensktext
         Github-repo med stora mängder svenska texter i JSON- och CSV-format.
