--- a/index.wiki
+++ b/index.wiki
@@ -1,13 +1,13 @@
-# Alternativ till zettelkasten? #
+= Alternativ till zettelkasten? =
 
 
-## dev ##
+== dev ==
     * [[fejk]] - Sköna fejkresurser och todos
     * [[blapp]] - Sköna BLAPP-resurser
     * [[scratchpad]] - tillfälliga grejer som bör fortsätta vara tillfälliga
     * [[datasources]] - lista över sköna datakällor
 
 
-## unix ##
+== unix ==
     * [[dotfiles]] - Skön dotfilshantering
     * [[appimage]] - appimage som "vanlig" applikation
