--- a/index.wiki
+++ b/index.wiki
@@ -1,15 +1,20 @@
 =  olin.wiki  =
 
-[[links|länkar]] - lista över sköna länkar
 
 == dev ==
     * [[fejk]] - Sköna fejkresurser och todos
     * [[blapp]] - Sköna BLAPP-resurser
     * [[datasources]] - lista över sköna datakällor
-    * === devops ===
+
+
+=== devops ===
     * [[containerization_with_go]] - kör go-applikationer i docker
 
 
 == unix ==
     * [[dotfiles]] - Skön dotfilshantering
     * [[appimage]] - appimage som "vanlig" applikation
+
+
+== produktivitet ==
+    * [[vimwiki]] - schyssta defaults för vimwiki
