--- a/index.wiki
+++ b/index.wiki
@@ -18,3 +18,6 @@
 
 == produktivitet ==
     * [[vimwiki]] - schyssta defaults för vimwiki
+
+== qmk ==
+    * [[keymapsnippets]] - sköna keymap-snippets
