--- a/index.wiki
+++ b/index.wiki
@@ -7,7 +7,7 @@
     * [[datasources]] - lista över sköna datakällor
 
 
-=== devops ===
+== devops ===
     * [[containerization_with_go]] - kör go-applikationer i docker
 
 
@@ -18,6 +18,7 @@
 
 == produktivitet ==
     * [[vimwiki]] - schyssta defaults för vimwiki
+
 
 == qmk ==
     * [[keymapsnippets]] - sköna keymap-snippets
